--- a/sass/pages/_base.scss
+++ b/sass/pages/_base.scss
@@ -2,9 +2,6 @@ body {
     font-family: 'Space Mono', monospace;
     color: $darkTextColor;
     cursor: default;
-    height: 100vh;
-    max-height: 100vh;
-    overflow: hidden;
     p {
         text-indent: 30px;
     }
