--- a/sass/pages/_landingPage.scss
+++ b/sass/pages/_landingPage.scss
@@ -1,7 +1,10 @@
 #landingPage {
+    height: 100vh;
+    max-height: 100vh;
+    overflow: hidden;
     background: url(../img/mountains.jpg) no-repeat;
     background-size: cover;
-    display: flex;
+    @include verticalAlign;
     a {
         width: 100%;
         height: 40%;
